# adlib2vgm

./: .gitignore  CMakeLists.txt  CommonIncludes.h  CommonIncludes.hpp  README.md  VgmOpl.cpp  VgmOpl.h  VgmOpl.hpp  main.cpp
.github/workflows/: push_pr_build_cmake.yml  release_cmake.yml
FakeAdplug/: FakeAdplug.h  FakeAdplug.hpp  FakeFprovide.cpp  FakeFprovide.h  FakeFprovide.hpp  FakeOpl.h  FakeOpl.hpp  FakePlayer.cpp  FakePlayer.h  FakePlayer.hpp
Formats/: Formats.h  Formats.hpp  a2m.cpp  a2m.h  adlib.h  adtrack.cpp  amd.cpp  cmf.cpp  cmf.h  cmfmcsop.cpp  composer.cpp  composer.h  d00.cpp  d00.h  dro.cpp  dro.h  dro2.cpp  dro2.h  got.cpp  imf.cpp  imf.h  lds.cpp  lds.h  mid.cpp  mid.h  mus.cpp  mus.h  player.h  protrack.cpp  protrack.h  rad2.cpp  rad2.h  rad2.hpp  raw.cpp  raw.h  rix.cpp  rix.h  rol.cpp  rol.h  s3m.cpp  (+5 more)
binio/: binfile.cpp  binfile.h  binio.cpp  binio.h  binstr.h  binwrap.h
examples/: another1.sop  axel_f1.rol  brahms1.mdi  bronix.pis  budokan.raw  ddd.jbm  demo1.mus  gorbi2.sqx  island.laa  jobba2.mad  kq1patch.003  kq1title.sci  lamer.hsc  morning.agd  playmus2.sng3  song11.got  track3.dtm  unknown.xxx  version1.a2m  water.sdb  wildlife.cmf2  xargon.cmf  xcity.imf
tools/: mus-mkf-to-rix.sh  reference.exit  reference.md5sum  reference.size  show-a2m-version.sh  test-all.sh
zstr/: strict_fstream.h  zstr.h
